--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ h1 {
 }
 h2 {
 	font-size: 1.875rem;
+	color: #003b6d;
 }
 p,
 a {
@@ -225,6 +226,49 @@ a {
 	font-family: 'Poppins', sans-serif;
 }
 
+/* Services */
+.squircles-container h2 {
+	color: #003b6d;
+}
+
+.squircles-container {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.squircle {
+	background-color: #6699cc;
+	color: #fff !important;
+	border-radius: 50%;
+	border: solid #003b6d 3px;
+	width: 275px;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 10px;
+	padding: 1.6rem;
+	box-sizing: border-box;
+	text-align: center !important;
+	flex: 0 0 auto;
+	text-indent: 0 !important;
+	font-size: 1rem;
+	transition: all 0.5s ease;
+}
+.squircle:hover {
+	border: solid #333 3px;
+	border-radius: 15%;
+}
+textarea {
+	height: 200px;
+	resize: none;
+	border-radius: 10px;
+}
+input {
+	border-radius: 10px;
+}
+
 @media screen and (max-width: 768px) {
 	.nav-links,
 	.search-bar {
@@ -246,5 +290,13 @@ a {
 
 	h1 {
 		font-size: 2rem;
+	}
+
+	.squircles-container {
+		flex-direction: column;
+	}
+
+	.squircle {
+		margin: 10px auto;
 	}
 }
