--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ a {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	background-color: rgba(0, 59, 109, 0.9);
+	background-color: rgba(0, 59, 109, 0.96);
 }
 .modal-content {
 	position: relative;
@@ -97,6 +97,8 @@ a {
 }
 .modal-content a,
 .close {
+	font-size: 1.8rem;
+	line-height: 2rem;
 	padding: 10px;
 	display: block;
 	color: #bdbdbd;
@@ -104,11 +106,9 @@ a {
 	cursor: pointer;
 }
 .close {
+	margin-top: 2rem;
 	display: inline-block;
-	font-size: 30px;
-	position: absolute;
-	right: 20px;
-	top: 0;
+	font-size: 4.5rem !important;
 }
 .footer {
 	background-color: #003b6d;
