--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,17 @@ body {
 }
 body {
 	font-family: Arial, sans-serif;
-	line-height: 1.5em;
+	line-height: 2em;
+}
+
+a {
+	color: #6699cc;
+	text-decoration: none;
+	transition: all 0.3s ease;
+}
+
+a:hover {
+	color: #003b6d;
 }
 
 h1,
@@ -23,9 +33,12 @@ h2 {
 	color: #003b6d;
 }
 p,
-a {
+a,
+li,
+ul {
 	font-family: 'Poppins', sans-serif;
 	font-size: 1.2rem;
+	list-style: circle inside;
 }
 .content-wrap {
 	flex: 1;
@@ -120,7 +133,7 @@ a {
 }
 .card {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	width: 50%;
+	max-width: 60%;
 	margin: 20px auto;
 	padding: 20px;
 	text-align: center;
@@ -269,6 +282,47 @@ input {
 	border-radius: 10px;
 }
 
+.cats p {
+	text-align: left;
+	text-indent: 30px;
+}
+
+.cat-box {
+	display: flex;
+	gap: 10px;
+	justify-content: space-between;
+}
+.cat-box img {
+	width: 50%;
+	height: 50%;
+	border-radius: 50%;
+}
+
+.dog-box {
+	display: flex;
+	flex-direction: column;
+}
+.dog-box img {
+	border-radius: 10px;
+}
+
+.vac {
+	flex-direction: row !important;
+}
+
+.vac img {
+	width: 300px;
+	height: 300px;
+	object-fit: cover;
+	border-radius: 50%;
+}
+
+@media screen and (min-width: 3840px) {
+	.card {
+		width: 35% !important;
+	}
+}
+
 @media screen and (max-width: 768px) {
 	.nav-links,
 	.search-bar {
@@ -278,7 +332,7 @@ input {
 		display: flex;
 	}
 	.card {
-		width: 80%;
+		min-width: 80%;
 	}
 
 	p,
@@ -298,5 +352,12 @@ input {
 
 	.squircle {
 		margin: 10px auto;
+	}
+
+	.cat-box {
+		flex-direction: column;
+	}
+	.cat-box img {
+		width: auto;
 	}
 }
