--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,10 @@ h3 {
 	font-family: 'Abril Fatface', serif;
 }
 h1 {
-	font-size: 2.125rem;
+	font-size: 3rem;
 }
 h2 {
-	font-size: 1.875rem;
+	font-size: 2rem;
 	color: #003b6d;
 }
 p,
@@ -73,7 +73,9 @@ ul {
 }
 
 .nav-links a.active {
-	color: white; /* or any color you want for the active state */
+	color: white;
+	text-decoration: underline;
+	font-size: 1.3rem;
 }
 .search-bar {
 	display: flex;
